--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "manifest_version": 2,
 
   "name": "Refresh",
-  "description": "This extension refreshes tabs.",
+  "description": "This extension refreshes tabs using right click menu.",
   "version": "1.0",
 
   "permissions": [
@@ -12,4 +12,7 @@
   "background": {
     "scripts": ["menu.js"]
   },
+  "icons":{
+  	"16": "icon.png"
+  }
 }
